server/compilers/goLiteJS/src/test/ml1/valid/top7.go
// top level declaration permutations
package main

var x int

func f(){}
