server/compilers/goLiteJS/src/test/ml1/invalid/slice4.go
// append without second argument
package main

var x []int

func main(){
    x = append(x)
}
